fix: adding maxlength to create/edit recipe to avoid overflow in cards

--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -36,6 +36,3 @@
 .form-error {
     @apply text-yellow-400 mt-2 text-sm;
 }
-.heart:hover{fill: red;}
-.heart:checked{fill: red;}
-
